Fix mobile nav alignment

--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ a {
     }
     header nav {
         margin: 0;
+        align-items: center;
     }
     body {
         padding: 0;
